# aoc2022rust

./: .gitignore  Makefile  README.md  generate
aoc/src/: lib.rs
day01/: Cargo.toml
day01/benches/: bench.rs
day01/src/: lib.rs  main.rs
day02/: Cargo.toml
day02/benches/: bench.rs
day02/src/: lib.rs  main.rs
day03/: Cargo.toml
day03/benches/: bench.rs
day03/src/: lib.rs  main.rs
day04/: Cargo.toml
day04/benches/: bench.rs
day04/src/: lib.rs  main.rs
day05/: Cargo.toml
day05/benches/: bench.rs
day05/src/: lib.rs  main.rs
day06/: Cargo.toml
day06/benches/: bench.rs
day06/src/: lib.rs  main.rs
day07/: Cargo.toml
day07/benches/: bench.rs
day07/src/: lib.rs  main.rs
day08/: Cargo.toml
day08/benches/: bench.rs
day08/src/: lib.rs  main.rs
day09/: Cargo.toml
day09/benches/: bench.rs
day09/src/: lib.rs  main.rs
day10/: Cargo.toml
day10/benches/: bench.rs
day10/src/: lib.rs  main.rs
day11/: Cargo.toml
day11/benches/: bench.rs
day11/src/: lib-old.rs  lib.rs  main.rs
day12/: Cargo.toml
day12/benches/: bench.rs
day12/src/: lib.rs  main.rs
day13/: Cargo.toml
day13/benches/: bench.rs
day13/src/: lib.rs  main.rs
day14/: Cargo.toml
day14/benches/: bench.rs
day14/src/: lib.rs  main.rs
day15/: Cargo.toml
day16/: Cargo.toml
day17/: Cargo.toml
day18/: Cargo.toml
day19/: Cargo.toml
day20/: Cargo.toml
day21/: Cargo.toml
day22/: Cargo.toml
day23/: Cargo.toml
day24/: Cargo.toml
day24/benches/: bench.rs
day24/src/: lib.rs  main.rs
day25/: Cargo.toml
runner/: Cargo.toml
(+31 files in other folders)
