[package]
name = "day24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
rustc-hash = "1.1"

[profile.release]
debug = true

[lib]
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "main"
path = "benches/bench.rs"
harness = false
